tests/baselines/reference/tsxAttributeResolution11.errors.txt
file.tsx(11,22): error TS2322: Type '{ bar: string; }' is not assignable to type 'IntrinsicAttributes & { ref?: string | undefined; }'.
  Property 'bar' does not exist on type 'IntrinsicAttributes & { ref?: string | undefined; }'.


==== react.d.ts (0 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    	}
    	interface ElementAttributesProperty {
    		props;
    	}
    	interface IntrinsicAttributes {
    		ref?: string;
    	}
    }
    
==== file.tsx (1 errors) ====
    class MyComponent {  
      render() {
      }
    
      props: {
    	  ref?: string;
      }
    }
    
    // Should be an OK
    var x = <MyComponent bar='world' />;
                         ~~~
!!! error TS2322: Type '{ bar: string; }' is not assignable to type 'IntrinsicAttributes & { ref?: string | undefined; }'.
!!! error TS2322:   Property 'bar' does not exist on type 'IntrinsicAttributes & { ref?: string | undefined; }'.
    
    